# remote-json

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  Remote.hs  remote-json.cabal  stack.yaml
Control/Monad/Remote/: Fresh.hs  JSON.hs
Control/Monad/Remote/JSON/: Client.hs  Debug.hs  Router.hs  Strong.hs  Trace.hs  Types.hs  Weak.hs
Control/Remote/Monad/: JSON.hs
Control/Remote/Monad/JSON/: Router.hs  Trace.hs  Types.hs
example/: DSL.hs  Example.hs  Main.hs  New.hs  Server.hs  Session.hs  Typed.hs  Untyped.hs
example/Strong/: DSL.hs  ScottyClient.hs  ScottyServer.hs  Server.hs  Typed.hs  Untyped.hs  VChanClient.hs  VChanServer.hs
example/Weak/: DSL.hs  Server.hs  Untyped.hs
front/: Main.hs
remote-json-client/: README.md  remote-json-client.cabal  stack.yaml
remote-json-client/Control/Monad/Remote/JSON/: Client.hs
remote-json-client/Control/Remote/Monad/JSON/: Client.hs
remote-json-server/: README.md  remote-json-server.cabal  stack.yaml
remote-json-server/Control/Monad/Remote/JSON/: Server.hs
remote-json-server/Control/Remote/Monad/JSON/: Server.hs
remote-json-server/example/: Main.hs  Untyped.hs
remote-json-test/: Blog.hs  DSL.hs  Dummy.hs  New.hs  Session.hs  System.hs  Unit.hs  Untyped.hs  remote-json-test.cabal  stack.yaml
remote-json-test/example/: Session.hs  Untyped.hs
remote-json-test/example.2/: Untyped.hs
remote-json-transport-bs/: remote-json-transport-bs.cabal
remote-json-transport-bs/Control/Remote/Monad/JSON/: .Transport.hs.swp  Transport.hs
tests/qc/: Test.hs
tests/spec/: Spec.hs  Spec.txt  Test.hs
