name:                remote-json
version:             0.2
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
-- copyright:           
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Control.Monad.Remote.JSON,
                       Control.Monad.Remote.JSON.Debug,
                       Control.Monad.Remote.JSON.Router,
                       Control.Monad.Remote.JSON.Types
                       
  -- other-modules:       
  build-depends:       aeson                  >= 0.8  && < 0.10
                     , base                   >= 4    && < 5
                     , data-default-class     >= 0.0.1 && < 0.1
                     , exceptions             >= 0.6  && < 0.9
                     , mtl                    >= 2.1.2
                     , natural-transformation >= 0.2  && < 0.3
                     , text                   >= 1.1  && < 1.3
                     , unordered-containers   >= 0.2.5 && < 0.2.6
                     , vector                 >= 0.10 && < 0.12
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall


Test-Suite test-spec
  type:       exitcode-stdio-1.0
  hs-source-dirs: ., tests/spec
  main-is:    Spec.hs
  build-depends: base                   >= 4 && < 5,
                 exceptions             >= 0.8 && < 0.9,
                 mtl                    >= 2.1.2,
                 aeson                  >= 0.8 && < 0.10,
                 unordered-containers   >= 0.2 && < 0.3,
                 text                   >= 1.2 && < 1.3,
                 vector                 >= 0.11 && < 0.12,
                 bytestring             >= 0.10 && < 0.11,
                 attoparsec             >= 0.13 && < 0.14

  default-language:    Haskell2010
  ghc-options:         -Wall


Test-Suite test-example
  type:       exitcode-stdio-1.0
  hs-source-dirs: ., example
  main-is:    Main.hs
  build-depends: base                   >= 4 && < 5,
                 exceptions             >= 0.8 && < 0.9,
                 mtl                    >= 2.1.2,
                 aeson                  >= 0.8 && < 0.10,
                 unordered-containers   >= 0.2 && < 0.3,
                 random                 >= 1.1 && < 1.2,
                 scientific             >= 0.3 && < 0.4,
                 text                   >= 1.2 && < 1.3,
                 vector                 >= 0.11 && < 0.12,
                 bytestring             >= 0.10 && < 0.11,
                 attoparsec             >= 0.13 && < 0.14

  default-language:    Haskell2010
  ghc-options:         -Wall

