name:                remote-json
version:             0.2
synopsis:            Remote Monad implementation of the JSON RPC protocol
description:         JSON RPC, where you can using monads and applicative functors
                     to bundle JSON RPC requests and commands.
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  README.md
tested-with:         GHC == 7.10.3
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/ku-fpg/remote-json

library
  exposed-modules:     Control.Monad.Remote.Fresh,
                       Control.Monad.Remote.JSON, 
                       Control.Monad.Remote.JSON.Client,
                       Control.Monad.Remote.JSON.Debug,
                       Control.Monad.Remote.JSON.Router,
                       Control.Monad.Remote.JSON.Types

  -- other-modules:
  build-depends:       aeson                  >= 0.8  && < 0.10
                     , base                   >= 4    && < 5
                     , data-default-class     >= 0.0.1 && < 0.1
                     , exceptions             >= 0.8  && < 0.9
                     , fail
                     , lens
                     , wreq
                     , mtl                    >= 2.1.2
                     , natural-transformation >= 0.3  && < 0.4
                     , remote-monad           == 0.1.0.0
                     , text                   >= 1.2  && < 1.3
                     , unordered-containers   >= 0.2.5 && < 0.2.6
                     , vector                 >= 0.11 && < 0.12
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall


Test-Suite test-spec
  type:       exitcode-stdio-1.0
  hs-source-dirs: tests/spec
  main-is:    Spec.hs
  build-depends:   aeson                  >= 0.8 && < 0.10
                 , attoparsec             >= 0.13 && < 0.14
                 , base                   >= 4 && < 5
                 , bytestring             >= 0.10 && < 0.11
                 , exceptions             >= 0.8 && < 0.9
                 , mtl                    >= 2.1.2
                 , natural-transformation >= 0.3  && < 0.4
                 , remote-json            == 0.2
                 , remote-monad           == 0.1.0.0
                 , text                   >= 1.2 && < 1.3
                 , unordered-containers   >= 0.2.5 && < 0.2.6
                 , vector                 >= 0.11 && < 0.12

  default-language:    Haskell2010
  ghc-options:         -Wall


Test-Suite test-example
  type:       exitcode-stdio-1.0
  hs-source-dirs: example
  main-is:    Main.hs
  build-depends:    aeson                  >= 0.8 && < 0.10
                  , attoparsec             >= 0.13 && < 0.14
                  , base                   >= 4 && < 5
                  , bytestring             >= 0.10 && < 0.11
                  , exceptions             >= 0.8 && < 0.9
                  , mtl                    >= 2.1.2
                  , natural-transformation >= 0.3 && < 0.4
                  , random                 >= 1.1 && < 1.2
                  , remote-json            == 0.2
                  , remote-monad           == 0.1.0.0
                  , scientific             >= 0.3 && < 0.4
                  , text                   >= 1.2 && < 1.3
                  , unordered-containers   >= 0.2.5 && < 0.2.6
                  , vector                 >= 0.11 && < 0.12

  default-language:    Haskell2010
  ghc-options:         -Wall
