name:                remote-json-client
version:             0.2
synopsis:            Web client wrapper for remote-json
description:         Web client, using wreq, for the JSON RPC protcol.
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  README.md
tested-with:         GHC == 7.10.3
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/ku-fpg/remote-json

library
  exposed-modules:     Control.Monad.Remote.JSON.Client

  -- other-modules:
  build-depends:       aeson                  >= 0.8  && < 0.10
                     , base                   >= 4    && < 5
                     , data-default-class     >= 0.0.1 && < 0.1
                     , exceptions             >= 0.8  && < 0.9
                     , fail
                     , lens
                     , wreq
                     , mtl                    >= 2.1.2
                     , natural-transformation >= 0.3  && < 0.4
                     , remote-monad           == 0.1.0.0
                     , remote-json            == 0.2
                     , text                   >= 1.2  && < 1.3
                     , unordered-containers   >= 0.2.5 && < 0.2.6
                     , vector                 >= 0.11 && < 0.12
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall

