name:                remote-json-server
version:             0.2
synopsis:            Web client wrapper for remote-json
description:         Web client, using wreq, for the JSON RPC protcol.
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  README.md
tested-with:         GHC == 7.10.3
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/ku-fpg/remote-json

library
  exposed-modules:     Control.Monad.Remote.JSON.Server

  -- other-modules:
  build-depends:       aeson                  >= 0.8  && < 0.10
                     , base                   >= 4    && < 5
                     , lens
                     , natural-transformation >= 0.3  && < 0.4
                     , remote-json            == 0.2
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall

