name:                remote-json-test
version:             0.2
synopsis:            Web client wrapper for remote-json
description:         Web client, using wreq, for the JSON RPC protcol.
license:             BSD3
license-file:        LICENSE
author:              Justin Dawson and Andy Gill
maintainer:          JDawson@ku.edu
copyright:           (c) 2016 The University of Kansas
category:            Network
build-type:          Simple
extra-source-files:  README.md
tested-with:         GHC == 7.10.3
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/ku-fpg/remote-json

executable  Dummy
  main-is:        Dummy.hs
  build-depends:    aeson                  >= 0.8 && < 0.10
                  , attoparsec             >= 0.13 && < 0.14
                  , base                   >= 4 && < 5
                  , bytestring             >= 0.10 && < 0.11
                  , exceptions             >= 0.8 && < 0.9
                  , mtl                    >= 2.1.2
                  , natural-transformation >= 0.3 && < 0.4
                  , random                 >= 1.1 && < 1.2
                  , remote-json            == 0.2
                  , remote-json-client     == 0.2
                  , remote-json-server     == 0.2
                  , remote-monad           == 0.1.0.0
                  , scientific             >= 0.3 && < 0.4
                  , text                   >= 1.2 && < 1.3
                  , unordered-containers   >= 0.2.5 && < 0.2.7
                  , vector                 >= 0.11 && < 0.12

  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall

Test-Suite remote-json-test-example
  type:       exitcode-stdio-1.0
  hs-source-dirs: example
  main-is:    Main.hs
  build-depends:    aeson                  >= 0.8 && < 0.10
                  , attoparsec             >= 0.13 && < 0.14
                  , base                   >= 4 && < 5
                  , bytestring             >= 0.10 && < 0.11
                  , exceptions             >= 0.8 && < 0.9
                  , mtl                    >= 2.1.2
                  , natural-transformation >= 0.3 && < 0.4
                  , random                 >= 1.1 && < 1.2
                  , remote-json            == 0.2
                  , remote-json-client     == 0.2
                  , remote-json-server     == 0.2
                  , remote-monad           == 0.1.0.0
                  , scientific             >= 0.3 && < 0.4
                  , text                   >= 1.2 && < 1.3
                  , unordered-containers   >= 0.2.5 && < 0.2.7
                  , vector                 >= 0.11 && < 0.12

  default-language:    Haskell2010
  ghc-options:         -Wall
