name:                remote-json-transport-bs
version:             0.1
synopsis:            Transport layer for remote-json-client
description:         Transport layer using ByteString to send json packets
license:             BSD3
license-file:        LICENSE
author:              Justin Dawson 
maintainer:          JDawson@ku.edu
copyright:           (c) 2016 The University of Kansas
category:            Network
build-type:          Simple
extra-source-files:  README.md
tested-with:         GHC == 7.10.3
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/ku-fpg/remote-json

library
  exposed-modules:     Control.Remote.Monad.JSON.Transport

  -- other-modules:
  build-depends:       aeson                  >= 0.8  && < 0.12
                     , base                   >= 4    && < 5
                     , natural-transformation >= 0.3.1   && < 0.4
                     , remote-json            >= 0.2 && < 0.3
                     , bytestring
                     
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall

